[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tower-http = { version = "0.5.0", features = ["trace", "request-id", "util"] }
tower = "0.4.13"
# 连接数据库的库
sqlx = { version = "0.7", features = [
    "runtime-async-std-native-tls",
    "mysql",
    "chrono",
] }
# 读取配置文件
dotenvy = "0.15.7"
# 时间
chrono = { version = "0.4.26", features = ["serde"] }
# 错误处理
anyhow = "1.0"
